src/test/ui/issues/issue-59508.stderr
error: incorrect parameter order
  --> $DIR/issue-59508.rs:10:21
   |
LL |     pub fn do_things<T, 'a, 'b: 'a>() {
   |                     ^^^^^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b: 'a, T>`

error: aborting due to previous error

